@@ -1,6 +1,12 @@
 2009-02-09  Curtis Gedak  <gedakc@gmail.com>
 
-	* README: Added -02-06  Curtis Gedak  <gedakc@gmail.com>
+	* src/Win_GParted.cc: Fixed crash on startup with Russian language.
+	  - Thanks to Dmitriy Motitskiy for small patch.
+	  - Closes GParted bug #570855
+
+	* README: Added note blkid is used for ext4 detection.
+
+2009-02-06  Curtis Gedak  <gedakc@gmail.com>
 
 	* configure.in: Append -svn to version for continuing development
 
